# KKCTBN_2018

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/pid/: controller_msg.h  pid_const_msg.h  plant_msg.h
devel/include/whatever/: flight_mode.h  image_process.h  node_master.h  override_motor.h  rc_number.h  setpoint.h
devel/lib/pid/: controller  controller_adaptive  first_order_plant  (+1 more)
src/pid/: CMakeLists.txt  contributors.txt
src/whatever/: CMakeLists.txt  package.xml
src/whatever/embedded/killswitch_nano/: killswitch_nano.ino
src/whatever/embedded/node_mcu_monitor/: node_mcu_monitor.ino
src/whatever/include/whatever/: haha.hpp
src/whatever/launch/: camera_test.launch  complete.launch  control_test.launch  not_pid.launch  pid_test.launch  test_camera.launch
src/whatever/msg/: flight_mode.msg  image_process.msg  node_master.msg  override_motor.msg  rc_number.msg  setpoint.msg
src/whatever/src/: log.txt
src/whatever/src/controller/: avoid_controller.cpp  simple_red_controller.cpp
src/whatever/src/image/: green_hough.cpp  hough_red_buoy.cpp  image_front.cpp  red_hough.cpp  simple_green.cpp  simple_red.cpp  yolo_green.cpp
src/whatever/src/main/: avoid_controller.cpp  debug_makara.cpp  motor_controller.cpp  node_controller.cpp  override_monitor.cpp  pid_controller.cpp  remote_monitor.cpp  simple_red_controller.cpp
src/whatever/src/not_used/: without_pid.cpp
src/whatever/src/record/: player.cpp  recorder.cpp
src/whatever/src/test/: hough  hough.cpp  simple  simple.cpp
src/whatever/src/trash/: haha.cpp  hough_red_buoy.cpp  image.cpp  listen.cpp  talker.cpp
(+86 files in other folders)
